k8s-files/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask-app-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: abdlerazek/acadmic-flask:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
