k8s-files/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-app-namespace
spec:
  type: ClusterIP
  selector:
    app: flask
  ports:
    - port: 80
      targetPort: 5000
