k8s-files/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: database-namespace
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
