k8s-files/NetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: database-namespace
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
