k8s-files/allow-network-db.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flask-to-mysql
  namespace: database-namespace
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: flask-app-namespace
      ports:
        - protocol: TCP
          port: 3306
  policyTypes:
    - Ingress
